Задание 5 - верстка photo.html ч.2

--- a/source/photo.html
+++ b/source/photo.html
@@ -63,32 +63,40 @@
             <li class="gallary__item gallary__item--large">
               <a class="gallary__image-link"><img class="gallary__image" src="./img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы"></a>
               <div class="gallary__description">
-                <p class="gallary__title">Неродные просторы</p>
-                <p class="gallary__author">Автор фото: Борис</p>
+                <div class="gallary__text-description">
+                  <p class="gallary__title">Неродные просторы</p>
+                  <p class="gallary__author">Автор фото: Борис</p>
+                </div>
                 <span class="gallary__likes">1350</span>
               </div>
             </li>
             <li class="gallary__item">
               <a class="gallary__image-link"><img class="gallary__image" src="./img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность"></a>
               <div class="gallary__description">
-                <p class="gallary__title">Местная растительность</p>
-                <p class="gallary__author">Автор фото: Сергей</p>
-                <span class="gallary__likes">143</span>
+                <div class="gallary__text-description">
+                  <p class="gallary__title">Местная растительность</p>
+                  <p class="gallary__author">Автор фото: Сергей</p>
+                </div>
+                  <span class="gallary__likes">143</span>
               </div>
             </li>
             <li class="gallary__item">
               <a class="gallary__image-link"><img class="gallary__image" src="./img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север"></a>
               <div class="gallary__description">
-                <p class="gallary__title">Дорога на север</p>
-                <p class="gallary__author">Автор фото: Петр</p>
+                <div class="gallary__text-description">
+                  <p class="gallary__title">Дорога на север</p>
+                  <p class="gallary__author">Автор фото: Петр</p>
+                </div>
                 <span class="gallary__likes">96</span>
               </div>
             </li>
             <li class="gallary__item">
               <a class="gallary__image-link"><img class="gallary__image" src="./img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола"></a>
               <div class="gallary__description">
-                <p class="gallary__title">Мост дьявола</p>
-                <p class="gallary__author">Автор фото: Антон</p>
+                <div class="gallary__text-description">
+                  <p class="gallary__title">Мост дьявола</p>
+                  <p class="gallary__author">Автор фото: Антон</p>
+                 </div>
                 <span class="gallary__likes">254</span>
               </div>
             </li>
@@ -100,7 +108,7 @@
           <p class="welcome-text__reasons welcome-text__reasons--narrow">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </section>
         <section class="video-player">
-          <video class="video-player__movie" width="320" height="210" poster="./img/video-mobile@1x.jpg">
+          <video class="video-player__movie" poster="./img/video-mobile@1x.jpg">
             <source src="#" type='video/webm; codecs="vp8, vorbis"'>
           </video>
           <div class="video-player__controls">
