--- a/source/form.html
+++ b/source/form.html
@@ -44,8 +44,15 @@
       <main class="page-form">
         <h1 class="visually-hidden">Отправить отзыв</h1>
         <section class="short-promo">
-          <img class="short-promo__short-text-image" src="./img/text-sedona.svg" alt="Седона">
-        </section>
+            <img class="short-promo__short-text-image" src="./img/text-sedona.svg" alt="Седона">
+
+            <picture>
+              <source media="(min-width: 1200px)" srcset="./img/bg-intro-triangle-desktop.svg">
+              <source media="(min-width: 768px)" srcset="./img/bg-intro-triangle-tablet.svg">
+              <img class="promo__triangle-mobile" src="./img/bg-intro-triangle-mobile.svg" alt="Декоративный элемент">
+            </picture>
+
+          </section>
         <section class="welcome-text">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
           <p class="welcome-text__about">Оставьте свой отзыв</p>
