--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,11 @@
                 </g>
               </svg>
           </button>
+          <button class="page-header__close-menu" type="button">
+            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+              <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+            </svg>
+          </button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active site-list__item--left">
               <a>Главная</a>
@@ -47,11 +52,11 @@
           <!-- <img class="promo__text-image" src="./img/text-sedona-index.svg" width="282" height="214" alt="Седона"> -->
           <img class="promo__text-image" src="./img/text-sedona-index.svg" alt="Седона">
 
-          <picture>
+          <!-- <picture>
             <source media="(min-width: 1200px)" srcset="./img/bg-intro-triangle-desktop.svg">
             <source media="(min-width: 768px)" srcset="./img/bg-intro-triangle-tablet.svg">
             <img class="promo__triangle-mobile" src="./img/bg-intro-triangle-mobile.svg" alt="Декоративный элемент">
-          </picture>
+          </picture> -->
 
           <!-- <svg class="promo__triangle-mobile" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="322px" height="26.111px" viewBox="440.469 30.889 320 26.111" enable-background="new 440.469 30.889 320 26.111" xml:space="preserve">
             <polygon fill="#FFFFFF" points="760.469,57 760.469,30.889 599.955,57"/>
