--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
 
       <header class="page-header">
         <nav class="main-nav">
-          <button class="page-header__open-nav" type="button">
+          <button class="main-nav__open-nav" type="button">
               <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
                 <g>
                   <rect width="22.928" height="3.964"/>
@@ -21,25 +21,27 @@
                 </g>
               </svg>
           </button>
-          <button class="page-header__close-menu" type="button">
-            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
-              <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
-            </svg>
-          </button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active site-list__item--left">
-              <a>Главная</a>
-            </li>
-            <li class="site-list__item site-list__item--left">
-              <a href="photo.html">Фото и видео</a>
-            </li>
-            <li class="site-list__item site-list__item--right">
-              <a href="form.html">Форма отзыва</a>
-            </li>
-            <li class="site-list__item site-list__item--right">
-              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-            </li>
-          </ul>
+          <div class="main-nav__wrapper">
+            <button class="main-nav__close-nav" type="button">
+              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+                <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+              </svg>
+            </button>
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item--active site-list__item--left">
+                <a>Главная</a>
+              </li>
+              <li class="site-list__item site-list__item--left">
+                <a href="photo.html">Фото и видео</a>
+              </li>
+              <li class="site-list__item site-list__item--right">
+                <a href="form.html">Форма отзыва</a>
+              </li>
+              <li class="site-list__item site-list__item--right">
+                <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              </li>
+            </ul>
+          </div>
         </nav>
         <a  href="/" class="page-header__logo" >
           <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны">
@@ -172,5 +174,6 @@
       </footer>
 
     </div>
+    <script src="./js/script.js"></script>
   </body>
 </html>
