--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,12 @@
           </div>
         </nav>
         <a  href="/" class="page-header__logo" >
-          <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны">
+          <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны"> -->
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
+            <img src="./img/logo-sedona-mobile.svg" alt="Седона">
+          </picture>
         </a>
       </header>
 
