--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,12 @@
           </div>
         </nav>
         <a  href="/" class="page-header__logo" >
-          <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны">
+          <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны"> -->
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
+            <img src="./img/logo-sedona-mobile.svg" alt="Седона">
+          </picture>
         </a>
       </header>
 
@@ -72,15 +77,17 @@
         </section>
         <article class="reasons">
           <div class="reasons__item reasons__item--with-triangle">
-            <svg class="reasons__triangle-mobile" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="37px" viewBox="0 12.452 320 37" enable-background="new 0 12.452 320 37" xml:space="preserve">
+            <!-- <svg class="reasons__triangle-mobile" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="37px" viewBox="0 12.452 320 37" enable-background="new 0 12.452 320 37" xml:space="preserve">
               <polygon fill="#81b3d2" points="0,0,320,37 "/>
               <polygon fill="#ffffff" points="320,12.452 0,12.452 0,34.175 160,49.452 320,34.175 "/>
-            </svg>
+            </svg> -->
             <h3 class="reasons__header">Настоящий городок</h3>
             <p class="reasons__number">&ndash; №1 &ndash;</p>
             <p class="reasons__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
-          <img class="reasons__photo" src="./img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото города">
+          <div class="reasons__photo reasons__photo--city">
+            <!-- <img class="reasons__photo" src="./img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото города"> -->
+          </div>
         </article>
         <!-- <article class="reasons"> -->
         <ul class="features-list">
@@ -104,7 +111,9 @@
             <p class="reasons__number">&ndash; №2 &ndash;</p>
             <p class="reasons__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
-          <img class="reasons__photo" src="./img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото моста дьявола">
+          <div class="reasons__photo reasons__photo--bridge">
+            <!-- <img class="reasons__photo" src="./img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото моста дьявола"> -->
+          </div>
         </article>
         <!-- <article class="reasons"> -->
         <ul class="reasons">
@@ -133,7 +142,14 @@
         </section>
         <section class="map">
           <h2 class="visually-hidden">Карта Седоны</h2>
-          <img class="map__image" src="./img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта Седоны">
+
+          <picture>
+            <source media="(min-width: 1200px)" srcset="./img/bg-map-desktop@1x.jpg 1x, ./img/bg-map-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="./img/bg-map-tablet@1x.jpg 1x, ./img/bg-map-tablet@2x.jpg 2x">
+            <img class="map__image" src="./img/bg-map-mobile@1x.jpg" srcset="./img/bg-map-mobile@2x.jpg 2x" alt="Карта Седоны">
+          </picture>
+
+          <!-- <img class="map__image" src="./img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта Седоны"> -->
         </section>
       </main>
 
