--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
             </ul>
           </div>
         </nav>
-        <a  href="/" class="page-header__logo" >
+        <a  href="index.html" class="page-header__logo" >
           <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны"> -->
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
