--- a/source/photo.html
+++ b/source/photo.html
@@ -29,7 +29,7 @@
             </button>
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--left">
-                <a href="/">Главная</a>
+                <a href="index.html">Главная</a>
               </li>
               <li class="site-list__item site-list__item--active site-list__item--left">
                 <a>Фото и видео</a>
@@ -43,7 +43,7 @@
             </ul>
           </div>
         </nav>
-        <a  href="/" class="page-header__logo" >
+        <a  href="index.html" class="page-header__logo" >
           <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны"> -->
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
