Задание 15 - в проект добавлена графика webp

--- a/source/index.html
+++ b/source/index.html
@@ -85,8 +85,17 @@
             <p class="reasons__number">&ndash; №1 &ndash;</p>
             <p class="reasons__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
-          <div class="reasons__photo reasons__photo--city">
+          <div class="reasons__photo">
             <!-- <img class="reasons__photo" src="./img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото города"> -->
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="./img/main-city-desktop@1x.webp 1x, ./img/main-city-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="./img/main-city-tablet@1x.webp 1x, ./img/main-city-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="./img/main-city-mobile@1x.webp 1x, ./img/main-city-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1200px)" srcset="./img/main-city-desktop@1x.jpg 1x, ./img/main-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/main-city-tablet@1x.jpg 1x, ./img/main-city-tablet@2x.jpg 2x">
+              <img class="reasons__photo-image" src="./img/main-city-mobile@1x.jpg" srcset="./img/main-city-mobile@2x.jpg 2x" alt="Карта Седоны">
+            </picture>
           </div>
         </article>
         <!-- <article class="reasons"> -->
@@ -111,8 +120,17 @@
             <p class="reasons__number">&ndash; №2 &ndash;</p>
             <p class="reasons__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
-          <div class="reasons__photo reasons__photo--bridge">
+          <div class="reasons__photo">
             <!-- <img class="reasons__photo" src="./img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото моста дьявола"> -->
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="./img/main-bridge-desktop@1x.webp 1x, ./img/main-bridge-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="./img/main-bridge-tablet@1x.webp 1x, ./img/main-bridge-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="./img/main-bridge-mobile@1x.webp 1x, ./img/main-bridge-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1200px)" srcset="./img/main-bridge-desktop@1x.jpg 1x, ./img/main-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/main-bridge-tablet@1x.jpg 1x, ./img/main-bridge-tablet@2x.jpg 2x">
+              <img class="reasons__photo-image" src="./img/main-bridge-mobile@1x.jpg" srcset="./img/main-bridge-mobile@2x.jpg 2x" alt="Карта Седоны">
+            </picture>
           </div>
         </article>
         <!-- <article class="reasons"> -->
@@ -144,6 +162,10 @@
           <h2 class="visually-hidden">Карта Седоны</h2>
 
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="./img/bg-map-desktop@1x.webp 1x, ./img/bg-map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="./img/bg-map-tablet@1x.webp 1x, ./img/bg-map-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="./img/bg-map-mobile@1x.webp 1x, ./img/bg-map-mobile@2x.webp 2x">
+
             <source media="(min-width: 1200px)" srcset="./img/bg-map-desktop@1x.jpg 1x, ./img/bg-map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="./img/bg-map-tablet@1x.jpg 1x, ./img/bg-map-tablet@2x.jpg 2x">
             <img class="map__image" src="./img/bg-map-mobile@1x.jpg" srcset="./img/bg-map-mobile@2x.jpg 2x" alt="Карта Седоны">
