--- a/source/photo.html
+++ b/source/photo.html
@@ -242,5 +242,6 @@
 
     </div>
     <script src="./js/script.js"></script>
+    <script src="./js/picturefill.min.js"></script>
   </body>
 </html>
