--- a/source/index.html
+++ b/source/index.html
@@ -13,19 +13,25 @@
       <header class="page-header">
         <nav class="main-nav">
           <button class="main-nav__open-nav" type="button">
-              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
+              <!-- <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
                 <g>
                   <rect width="22.928" height="3.964"/>
                   <rect y="9.009" width="22.928" height="3.964"/>
                   <rect y="18.018" width="22.928" height="3.964"/>
                 </g>
-              </svg>
+              </svg> -->
+
+              <svg class="main-nav__open-nav-icon" width="23" height="22"><use xlink:href="./img/sprite.svg#icon-menu"></use></svg>
+
           </button>
           <div class="main-nav__wrapper">
             <button class="main-nav__close-nav" type="button">
-              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+              <!-- <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
                 <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
-              </svg>
+              </svg> -->
+
+              <svg class="main-nav__close-nav-icon" width="22" height="22"><use xlink:href="./img/sprite.svg#icon-cross"></use></svg>
+
             </button>
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--active site-list__item--left">
@@ -46,7 +52,7 @@
         <a  href="index.html" class="page-header__logo" >
           <!-- <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логитип Седоны"> -->
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
             <img src="./img/logo-sedona-mobile.svg" alt="Седона">
           </picture>
@@ -208,7 +214,7 @@
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
             <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
           </svg>
-        </a>
+         </a>
       </footer>
 
     </div>
