--- a/source/photo.html
+++ b/source/photo.html
@@ -12,6 +12,20 @@
 
       <svg style="display: none">
 
+        <symbol version="1.1" id="icon-email" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+          <path d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z"/>
+        </symbol>
+
+        <symbol version="1.0" id="icon-phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
+          <g>
+            <g transform="translate(-85.000000, -126.000000)">
+              <g transform="translate(85.000000, 126.000000)">
+                <path fill="#010101" d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z"/>
+              </g>
+            </g>
+          </g>
+        </symbol>
+
         <symbol version="1.0" id="icon-replay" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
           <path d="M8,4V0L3,5l5,5V6c3.315,0,6,2.686,6,6s-2.685,6-6,6s-6-2.686-6-6H0c0,4.42,3.58,8,8,8s8-3.58,8-8S12.42,4,8,4z"/>
         </symbol>
@@ -19,7 +33,7 @@
         <symbol version="1.0" id="icon-subtitles" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 20" enable-background="new 0 0 32 20" xml:space="preserve">
           <path d="M29,0H3C1.35,0,0,1.35,0,3v14c0,1.65,1.35,3,3,3h26c1.65,0,3-1.35,3-3V3C32,1.35,30.65,0,29,0z M14.403,15.854c-0.545,0.108-1.104,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041 s-0.852-1.103-1.133-1.868C7.69,12.02,7.551,11.091,7.551,10c0-1.134,0.157-2.085,0.471-2.851c0.315-0.768,0.723-1.384,1.224-1.854  c0.502-0.468,1.062-0.804,1.679-1.008c0.616-0.204,1.233-0.307,1.852-0.307c0.66,0,1.22,0.045,1.678,0.134  c0.457,0.087,0.835,0.192,1.133,0.313L15.14,6.347c-0.254-0.121-0.555-0.209-0.902-0.265C13.891,6.027,13.47,6,12.973,6 c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031c0,0.598,0.067,1.142,0.199,1.632  c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.607,0.619,1.01,0.812c0.402,0.193,0.867,0.29,1.396,0.29  c0.496,0,0.915-0.049,1.257-0.148c0.342-0.099,0.639-0.227,0.893-0.38l0.463,1.841C15.398,15.564,14.949,15.745,14.403,15.854z   M23.101,15.854c-0.545,0.108-1.105,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041  s-0.852-1.103-1.133-1.868c-0.281-0.767-0.421-1.695-0.421-2.786c0-1.134,0.157-2.085,0.471-2.851  c0.314-0.768,0.723-1.384,1.223-1.854c0.502-0.468,1.062-0.804,1.68-1.008c0.616-0.204,1.233-0.307,1.851-0.307 c0.661,0,1.221,0.045,1.678,0.134c0.458,0.087,0.836,0.192,1.133,0.313l-0.446,1.918c-0.253-0.121-0.554-0.209-0.901-0.265  C22.588,6.027,22.166,6,21.67,6c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031  c0,0.598,0.067,1.142,0.199,1.632c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.606,0.619,1.009,0.812 c0.402,0.193,0.868,0.29,1.396,0.29c0.497,0,0.915-0.049,1.257-0.148c0.342-0.099,0.64-0.227,0.894-0.38l0.463,1.841  C24.096,15.564,23.646,15.745,23.101,15.854z"/>
         </symbol>
-      
+
         <symbol version="1.0" id="icon-fullscreen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
           <g>
             <polygon points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0"/>
@@ -351,7 +365,19 @@
       <main class="page-photo">
         <h1 class="visually-hidden">Фото и видео галлерея</h1>
         <section class="short-promo">
-          <img class="short-promo__short-text-image" src="./img/text-sedona.svg" alt="Седона">
+          <!-- <img class="short-promo__short-text-image" src="./img/text-sedona.svg" alt="Седона"> -->
+
+          <svg version="1.0" class="short-promo__short-text-image" id="short-promo__short-text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="459.754px" height="79.805px" viewBox="0 0 459.754 79.805" enable-background="new 0 0 459.754 79.805" xml:space="preserve">
+            <g>
+              <path fill="#FFFFFF" d="M44.466,21.738c-3.572-2.979-8.139-4.963-12.902-4.963c-3.572,0-8.338,2.084-8.338,6.253 c0,4.368,5.261,6.055,8.636,7.146l4.964,1.489C47.248,34.74,55.287,40,55.287,52.11c0,7.445-1.787,15.088-7.742,20.149 c-5.855,4.964-13.697,7.048-21.24,7.048c-9.43,0-18.661-3.177-26.305-8.537l8.338-15.683c4.865,4.269,10.621,7.742,17.271,7.742 c4.566,0,9.43-2.283,9.43-7.545c0-5.459-7.643-7.345-11.812-8.535C11.019,43.274,2.978,40.101,2.978,25.607 c0-15.188,10.818-25.112,25.807-25.112c7.543,0,16.775,2.382,23.426,6.154L44.466,21.738z"/>
+              <path fill="#FFFFFF" d="M91.831,18.959v12.506h21.937v16.479H91.831v12.899h23.127v16.479H72.376V2.483h42.582V18.96L91.831,18.959 L91.831,18.959z"/>
+              <path fill="#FFFFFF" d="M129.417,2.482h27.594c20.844,0,38.016,16.377,38.016,37.419c0,21.041-17.271,37.42-38.016,37.42h-27.594 V2.482z M148.872,60.846h4.367c11.612,0,21.539-6.352,21.539-20.942c0-13.4-8.834-20.943-21.341-20.943h-4.565V60.846z"/>
+              <path fill="#FFFFFF" d="M286.873,38.513c0,24.219-17.371,41.292-41.394,41.292c-24.02,0-41.391-17.071-41.391-41.292 C204.089,15.881,223.941,0,245.479,0C267.019,0,286.873,15.881,286.873,38.513z M224.339,38.612 c0,12.905,9.529,22.333,21.141,22.333c11.613,0,21.144-9.43,21.144-22.333c0-10.323-9.526-19.752-21.144-19.752 C233.867,18.86,224.339,28.29,224.339,38.612z"/>
+              <path fill="#FFFFFF" d="M297.238,2.482h19.454l35.636,45.757h0.196V2.482h19.453v74.839h-19.453L316.89,31.465h-0.197v45.856 h-19.454V2.482z"/>
+              <path fill="#FFFFFF" d="M407.345,64.319l-5.16,13.002h-20.646l28.785-74.839h21.242l28.188,74.839h-20.745l-4.862-13.002H407.345z M420.945,25.609h-0.199l-8.039,23.824h16.178L420.945,25.609z"/>
+            </g>
+          </svg>
+
 
           <!-- <picture>
             <source media="(min-width: 1200px)" srcset="./img/bg-intro-triangle-desktop.svg">
