Задание 18 - Добавлены минификаторы html и js; добавлен preload шрифтов и font-display: swap

--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона - Написать отзыв</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="./fonts/ptsans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/ptsansbold.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.min.css">
   </head>
   <body>
@@ -377,6 +379,6 @@
       </footer>
 
     </div>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.min.js"></script>
   </body>
 </html>
