--- a/source/photo.html
+++ b/source/photo.html
@@ -260,7 +260,7 @@
         <section class="photos">
           <ul class="photos__list gallary">
             <li class="gallary__item gallary__item--large">
-              <a class="gallary__image-link">
+              <a href="#" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-sunset-desktop@1x.webp 1x, ./img/photo-sunset-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-sunset-tablet@1x.webp 1x, ./img/photo-sunset-tablet@2x.webp 2x">
@@ -282,7 +282,7 @@
               </div>
             </li>
             <li class="gallary__item">
-              <a class="gallary__image-link">
+              <a href="#" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-cactus-desktop@1x.webp 1x, ./img/photo-cactus-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-cactus-tablet@1x.webp 1x, ./img/photo-cactus-tablet@2x.webp 2x">
@@ -304,7 +304,7 @@
               </div>
             </li>
             <li class="gallary__item">
-              <a class="gallary__image-link">
+              <a href="#" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-roads-desktop@1x.webp 1x, ./img/photo-roads-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-roads-tablet@1x.webp 1x, ./img/photo-roads-tablet@2x.webp 2x">
@@ -327,7 +327,7 @@
               </div>
             </li>
             <li class="gallary__item">
-              <a class="gallary__image-link">
+              <a href="#" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop@1x.webp 1x, ./img/photo-bridge-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-bridge-tablet@1x.webp 1x, ./img/photo-bridge-tablet@2x.webp 2x">
@@ -358,6 +358,7 @@
         </section>
         <section class="video-player">
           <picture>
+            <h2 class="visually-hidden">Видеообзор седоны</h2>
             <source type="image/webp" media="(min-width: 1200px)" srcset="./img/video-desktop@1x.webp 1x, ./img/video-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="./img/video-tablet@1x.webp 1x, ./img/video-tablet@2x.webp 2x">
             <source type="image/webp" srcset="./img/video-mobile@1x.webp 1x, ./img/video-mobile@2x.webp 2x">
