Внесение исправлений в верстку ч3

--- a/source/form.html
+++ b/source/form.html
@@ -17,11 +17,11 @@
 
       <header class="page-header">
         <nav class="main-nav">
-          <button class="main-nav__open-nav" type="button" aria-label="Открыть меню">
+          <button class="main-nav__open-nav main-nav--hide" type="button" aria-label="Открыть меню">
             <svg class="main-nav__open-nav-icon" width="23" height="22"><use xlink:href="#icon-menu"></use></svg>
           </button>
           <div class="main-nav__wrapper">
-            <button class="main-nav__close-nav" type="button" aria-label="Закрыть меню">
+            <button class="main-nav__close-nav main-nav--hide" type="button" aria-label="Закрыть меню">
               <svg class="main-nav__close-nav-icon" width="22" height="22"><use xlink:href="#icon-cross"></use></svg>
             </button>
             <ul class="main-nav__list site-list">
