--- a/source/index.html
+++ b/source/index.html
@@ -17,11 +17,11 @@
 
       <header class="page-header">
         <nav class="main-nav">
-          <button class="main-nav__open-nav" type="button" aria-label="Открыть меню">
+          <button class="main-nav__open-nav main-nav--hide" type="button" aria-label="Открыть меню">
             <svg class="main-nav__open-nav-icon" width="23" height="22"><use xlink:href="#icon-menu"></use></svg>
           </button>
           <div class="main-nav__wrapper">
-            <button class="main-nav__close-nav" type="button" aria-label="Закрыть меню">
+            <button class="main-nav__close-nav main-nav--hide" type="button" aria-label="Закрыть меню">
               <svg class="main-nav__close-nav-icon" width="22" height="22"><use xlink:href="#icon-cross"></use></svg>
             </button>
             <ul class="main-nav__list site-list">
@@ -319,21 +319,21 @@
               <svg class="features-list__present-icon" height="32" width="38"><use xlink:href="#icon-gift"></use></svg>
             </span>
             <h3 class="features-list__header">Сувениры</h3>
-            <p class="features-list__description">Не только китайского, но и местного производства!</p>
+            <p class="features-list__description">Не только китайского, &nbsp;<br class="features-list__show-br-desktop"> но и местного производства!</p>
           </li>
           <li class="features-list__item">
             <span class="features-list__burger">
               <svg class="features-list__burger-icon" height="42" width="37"><use xlink:href="#icon-burger"></use></svg>
             </span>
             <h3 class="features-list__header">Еда</h3>
-            <p class="features-list__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <p class="features-list__description">Всегда заказывайте фирменный бургер,&nbsp;<br class="features-list__show-br">вы не разочаруетесь!</p>
           </li>
         </ul>
         <article class="reasons reasons--reverse">
           <div class="reasons__item">
-            <h3 class="reasons__header">&nbsp;Там есть мост дьявола</h3>
+            <h3 class="reasons__header">&nbsp;Там есть&nbsp;<br class="features-list__show-br"> мост дьявола</h3>
             <p class="reasons__number">&ndash; №2 &ndash;</p>
-            <p class="reasons__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <p class="reasons__description">Да, по нему можно пройти!&nbsp;<br class="reasons__show-br-desktop"> Если вы осмелитесь, конечно</p>
           </div>
           <div class="reasons__photo">
             <picture>
@@ -355,19 +355,19 @@
           <li class="reasons__item reasons--other">
             <h3 class="reasons__header">Красивая дорога</h3>
             <p class="reasons__number">&ndash; №4 &ndash;</p>
-            <p class="reasons__description">&nbsp; Ехать в Седону из Лас-Вегаса &nbsp; совсем не скучно!</p>
+            <p class="reasons__description">Ехать в Седону из&nbsp;<br class="reasons__show-br-tablet"> Лас-Вегаса&nbsp;<br class="reasons__show-br-mobile"> совсем&nbsp;<br class="reasons__show-br-tablet-desktop"> не скучно!</p>
           </li>
           <li class="reasons__item reasons--other">
             <h3 class="reasons__header">Мало туристов</h3>
             <p class="reasons__number">&ndash; №5 &ndash;</p>
-            <p class="reasons__description">&nbsp; Большинство едет в Гранд Каньон &nbsp; и толпится там</p>
+            <p class="reasons__description">Большинство едет в Гранд Каньон&nbsp;<br class="reasons__show-br-mobile"> и толпится там</p>
           </li>
         </ul>
         <section class="hotel-search">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
           <p class="hotel-search__header">Заинтересовались?</p>
-          <p class="hotel-search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <button class="hotel-search__button" type="button">Найти гостиницу</button>
+          <p class="hotel-search__description">Укажите предполагаемые даты поездки,&nbsp;<br class="hotel-search__show-br"> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="hotel-search__button" href="search.html" type="button">Найти гостиницу</a>
         </section>
         <section class="map">
           <h2 class="visually-hidden">Карта Седоны</h2>
